Reduced the size of h1 at small resolutions to avoid issues with a little horizontal scrolling .

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,7 +42,7 @@ html, body {
 
 @media (max-width: 650px) {
     h1 {
-        font-size: 20vw;
+        font-size: 18vw;
     }
 }
 
